--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
-    "build": "quasar build"
+    "build": "quasar build",
+    "build:pwa": "quasar build -m pwa",
+    "pwa:add": "quasar mode add pwa"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
@@ -35,7 +37,14 @@
     "prettier": "^2.5.1",
     "typescript": "^4.5.4",
     "vite-plugin-checker": "^0.6.4",
-    "vue-tsc": "^1.8.22"
+    "vue-tsc": "^1.8.22",
+    "workbox-build": "^7.1.0",
+    "workbox-cacheable-response": "^7.1.0",
+    "workbox-core": "^7.1.0",
+    "workbox-expiration": "^7.1.0",
+    "workbox-precaching": "^7.1.0",
+    "workbox-routing": "^7.1.0",
+    "workbox-strategies": "^7.1.0"
   },
   "engines": {
     "node": "^20 || ^18 || ^16",
